<resources>
    <string name="app_name">Notebook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Notebook</string>
    <string name="nav_header_subtitle">Help you to learn new words</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="empty_view_subtitle_text">Press the button to add new word</string>
    <string name="empty_view_title_text">Your word list is empty</string>
    <string name="empty_view_image_desc">Image for empty view</string>
    <string name="menu_drawer_tools">Tools</string>
    <string name="menu_drawer_communicate">Communicate</string>
    <string name="menu_drawer_share">Share</string>
    <string name="menu_drawer_send">Send</string>
    <string name="action_add">Add new word</string>
    <string name="action_delete_all">Delete all words</string>
    <string name="action_editor_delete">Delete word</string>
    <string name="editor_word_title">Word</string>
    <string name="editor_edit_word_hint">Enter word</string>
    <string name="editor_trans_title">Translation</string>
    <string name="editor_edit_trans_hint">Enter translation</string>
    <string name="editor_activity_title_edit">Edit word</string>
    <string name="editor_activity_title_add">Add word</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes. Are you sure to discard the changes?</string>
    <string name="unsaved_changes_dialog_keep_editing">Keep editing</string>
    <string name="unsaved_changes_dialog_discard">Discard</string>
    <string name="unsaved_changes_dialog_title">Confirm</string>
    <string name="action_editor_save">Save</string>
    <string name="delete_confirm_dialog_title">Confirm</string>
    <string name="delete_confirm_dialog_msg">Are you sure to delete this word?</string>
    <string name="delete_confirm_dialog_delete">Delete</string>
    <string name="delete_confirm_dialog_cancel">Cancel</string>
    <string name="editor_activity_no_data">No data entered</string>
    <string name="editor_activity_need_word">You have to enter a word</string>
    <string name="editor_activity_need_trans">You have enter a translation</string>
    <string name="editor_activity_save_failed">Save failed</string>
    <string name="editor_activity_save_succ">Save successful</string>
    <string name="editor_activity_update_failed">Update failed</string>
    <string name="editor_activity_update_succ">Update successful</string>
    <string name="editor_activity_delete_failed">Deletion failed</string>
    <string name="editor_activity_delete_succ">Deletion successful</string>
    <string name="main_activity_list_already_empty">Word list is already empty</string>
    <string name="delete_all_words_dialog_title">Warning! Be careful!</string>
    <string name="delete_all_words_dialog_msg">This action will delete all words. Are you sure to continue?</string>
    <string name="delete_all_words_dialog_positive">Yes</string>
    <string name="delete_all_words_dialog_negative">Cancel</string>
    <string name="action_popup_edit">Edit</string>
    <string name="action_popup_delete">Delete</string>
    <string name="action_popup_share">Share</string>
    <string name="action_popup_export">Export</string>
    <string name="main_activity_update_failed">Deletion failed</string>
    <string name="main_activity_update_succ">Deletion successful</string>
    <string name="alphabet"> ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search word</string>
    <string name="menu_drawer_file">File</string>
    <string name="menu_drawer_export">Export</string>
    <string name="menu_drawer_import">Import</string>
    <string name="main_activity_file_not_exist">File doesn\'t exist</string>
    <string name="question_add_words_before_quiz">You need to add at least two words to start</string>
    <string name="question_no_quiz_with_empty_list">Quiz cannot be started</string>
    <string name="menu_drawer_quiz">Start Quiz</string>
    <string name="you_need_more_than_2_words_to_start_quiz">You need more than 2 words to start quiz</string>
    <string name="quiz_activity_congrats_right_answer">Congratulation. That was right</string>
    <string name="quiz_activity_sorry_wrong_answer">Sorry. That was wrong</string>
    <string name="action_popup_copy">Copy</string>
</resources>
