<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_all_padding"
    tools:context=".EditorActivity">

    <TextView
        android:id="@+id/editor_text_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editor_word_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/editor_edit_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editor_edit_word_hint"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/editor_text_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editor_trans_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/editor_edit_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editor_edit_trans_hint"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>